fix: updated the logo on the seeker dashboard and refactor the api service to use apiUrl from environments for easy access

--- a/src/app/features/dashboard/seeker-dashboard/seeker-dashboard.component.html
+++ b/src/app/features/dashboard/seeker-dashboard/seeker-dashboard.component.html
@@ -6,10 +6,10 @@
     <button class="mobile-close-btn" (click)="closeSidebar()">
       <i class="fas fa-times"></i>
     </button>
-    <!-- Logo -->
-    <div class="logo">
-      <span class="logo-text">JobNet</span>
-    </div>
+    <!-- Brand Logo -->
+    <a class="brand-logo" routerLink="/">
+      <img src="/assets/jobnetlogo2.png" alt="" width="150" height="45" style="object-fit: cover;" loading="lazy">
+    </a>
     <!-- User Profile -->
     <div class="user-profile" (click)="toggleUserDropdown()">
       <div class="user-avatar">
