--- a/src/app/features/dashboard/seeker-dashboard/seeker-dashboard.component.css
+++ b/src/app/features/dashboard/seeker-dashboard/seeker-dashboard.component.css
@@ -103,11 +103,11 @@ body {
   }
 }
 
-/* Logo */
-.logo {
+/* Brand Logo */
+.brand-logo {
   display: flex;
   align-items: center;
-  padding: 0 24px;
+  padding: 0 0 0 14px;
   margin-bottom: 32px;
 }
 
