fix: updated the styling for the bookmark icon when a job is saved

--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -275,7 +275,7 @@
                 <button class="btn btn-sm btn-outline-secondary bookmark-btn" [class.active]="job.isSaved"
                   (click)="onToggleSaveJob(job)">
                   <i *ngIf="!job.isSaved" class="far fa-bookmark"></i>
-                  <i *ngIf="job.isSaved" class="fa-solid fa-bookmark" style="color: #31795a"></i>
+                  <i *ngIf="job.isSaved" class="fa-solid fa-bookmark" style="background-color: #31795a"></i>
                 </button>
               </div>
 
